--- a/.latex-common/titlepage.tex
+++ b/.latex-common/titlepage.tex
@@ -11,7 +11,7 @@ contents={\parbox[b][\layerheight][b]{\layerwidth}{%
 
 \title{
 	\vspace*{1.4in}
-	\Huge{Thesis}\\
+	\Huge{Thesis (working draft)}\\
 	\vspace*{0.4in}
 	\Large{\documenttitle}\\
 	\vspace*{4cm}
