--- a/reports/2019-11-02-progress.tex
+++ b/reports/2019-11-02-progress.tex
@@ -1,5 +1,7 @@
 \newcommand*{\Root}{..}
 \input{\Root/.latex-common/preamble.tex}
+\renewcommand{\documentdate}{November 2, 2019}
+\renewcommand{\documenttitle}{Progress Report 1}
 \begin{document}
 \input{\Root/.latex-common/titlepage.tex}
 \onehalfspacing
