Add initial presentation 1

--- a/reports/2019-11-02-progress.tex
+++ b/reports/2019-11-02-progress.tex
@@ -19,7 +19,7 @@
 \chapter*{Status}
 Back in February-March when I had proposed my subject on Continuous Integration, I was given the advice to choose my subject as broad as possible and then refine it during my literature study. My original idea was to perform research into the distribution and scalability of Continous Integration systems, on constrained (low-end) devices. On the first meeting with my supervisors, I was tasked with identifying common problems on this subject in order to determine the scope of my thesis. While performing this research however, I quickly discovered a more interesting problem, which is related to scalability but in a slightly different way.\\
 
-\noindent Currently one of the major issues with Continuous Integration is the following: In software, a \emph{regression} is defined as a part of the software that initially was working and then broke, for example because of a change in the codebase. In order to fix this, the developer typically writes a \emph{regression test}. This test should fail, because the part it intends to test is broken, and the developer should resolve the broken part in order to make the test pass. It is clear that a regression test can never be removed from the test suite, because this could possibly cause that same bug to reoccur at some point in the future. As time goes on, this results in a large test suite, which needs to be fully executed every single time a developer contributes work to the project. In this thesis I want to research whether it is possible to predict which tests will fail, given a certain change in the code, in order to execute the tests with the highest probability of failling as soon as possible. This saves developers multiple hours of waiting for CI results, as they can start identifying and resolving issues sooner if a test already fails in the beginning of the test suite.\\
+\noindent Currently one of the major issues with Continuous Integration is the following: In software, a \emph{regression} is defined as a part of the software that initially was working and then broke, for example because of a change in the codebase. In order to fix this, the developer typically writes a \emph{regression test}. This test should fail, because the part it intends to test is broken, and the developer should resolve the broken part in order to make the test pass. It is clear that a regression test can never be removed from the test suite, because this could possibly cause that same bug to reoccur at some point in the future. As time goes on, this results in a large test suite, which needs to be fully executed every single time a developer contributes work to the project. In this thesis I want to research whether it is possible to predict which tests will fail, give(n a certain change in the code, in order to execute the tests with the highest probability of failling as soon as possible. This saves developers multiple hours of waiting for CI results, as they can start identifying and resolving issues sooner if a test already fails in the beginning of the test suite.\\
 
 \noindent After I had identified this problem, I have found and read several research papers on this subject. Every paper describes approaches to determine whether or not a test might fail. Next, I have searched for open-source projects, that also publicize their build data. Currently I have found two Java projects (REST-assured\footnote{\url{https://rest-assured.io/}} and Mockito\footnote{\url{https://site.mockito.org/}}. Additionally, I have also included Dodona\footnote{\url{https://dodona.ugent.be}}, a project started by my own faculty which is coded in Ruby-on-Rails, because I am very familiar with the codebase thanks to previous student jobs. For all three of these projects, I have identified the failing builds and wrote scripts to scrape and extract usable data by parsing the build logs, as can be seen in \autoref{fig:builds-pre} and \autoref{lst:builds-post}.
 
