--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -91,6 +91,18 @@
 	autogobble=true
 }
 
+\lstset{
+	numbers=left,
+	numberstyle=\scriptsize,
+	stepnumber=1,
+	numbersep=8pt,
+	showstringspaces=false,
+	breaklines=true,
+	frame=lines,
+	backgroundcolor=\color{code-background},
+	autogobble=true
+}
+
 \titleclass{\chapter}{straight}
 
 \titleformat{\chapter}[display]{\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{18pt}{\huge}
