--- a/paper/other-ways.tex
+++ b/paper/other-ways.tex
@@ -1,3 +1,4 @@
 \chapter{Other cost-reducing factors}
+(TODO; provisionary: chapter might be omitted completely)
 
 - kost van server die staat te idle'n
