--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,29 @@
+@ARTICLE{6588537,
+	author={},
+	journal={ISO/IEC/IEEE 29119-1:2013(E)},
+	title={ISO/IEC/IEEE International Standard - Software and systems engineering --Software testing --Part 1:Concepts and definitions},
+	year={2013},
+	volume={},
+	number={},
+	pages={1-64},
+	keywords={IEC standards;IEEE standards;ISO standards;program testing;software engineering;systems engineering;software testing standards;internationally-agreed standard set;ISO/IEC/IEEE 29119-1 standard;ISO/IEC/IEEE 29119 standard;systems engineering;IEC standards;ISO standards;Testing;ISO;Software testing;Formal verification;Process control;29119;29119-1;software testing;Test Planning Process;Test Plan;verification and validation},
+	doi={10.1109/IEEESTD.2013.6588537},
+	ISSN={null},
+	month={Sep.},}
+
+@ARTICLE{7106435,
+	author={},
+	journal={ISO/IEC/IEEE 15288 First edition 2015-05-15},
+	title={ISO/IEC/IEEE International Standard - Systems and software engineering -- System life cycle processes},
+	year={2015},
+	volume={},
+	number={},
+	pages={1-118},
+	keywords={customer satisfaction;software engineering;systems engineering;software engineering;systems engineering;system life cycle process;customer satisfaction;international standard;software life cycle process;ISO/IEC 12207:2008;IEEE Standards;IEC Standards;iSO Standards;Software engineering;Product life cycle management;Systems engineering and theory;15288;life cycle;life cycle process;software},
+	doi={10.1109/IEEESTD.2015.7106435},
+	ISSN={null},
+	month={May},}
+
 @ARTICLE{8016712,
 	author={},
 	journal={ISO/IEC/IEEE 24765:2017(E)},
@@ -117,3 +143,12 @@
 	doi={10.1109/ECBS.1997.581900},
 	ISSN={},
 	month={March},}
+
+@book{Myers:2011:AST:2161638,
+	author = {Myers, Glenford J. and Sandler, Corey and Badgett, Tom},
+	title = {The Art of Software Testing},
+	year = {2011},
+	isbn = {1118031962, 9781118031964},
+	edition = {3rd},
+	publisher = {Wiley Publishing},
+}
