--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -20,6 +20,8 @@
 \newpage
 \input{velocity.tex}
 \newpage
+\input{evaluation.tex}
+\newpage
 \input{other-ways.tex}
 \newpage
 \input{conclusion.tex}
