--- a/paper/velocity.tex
+++ b/paper/velocity.tex
@@ -1,12 +1,9 @@
-\chapter{VeloCIty}
-
-- Experiment setup
-
-  -  Data verzameling
-
-  - Bespreek de geselecteerde projecten
+\chapter{Proposed framework: VeloCIty}
+(TODO)
 
 - Implementatiedetails van algoritmes
+
+- Uitwerking: nog onder voorbehoud (2e semester)
 
 - Metapredictor: Voer alle algoritmes eens uit en rangschik ze volgens hoe goed ze het voorspeld hebben
 
