--- a/paper/references.bib
+++ b/paper/references.bib
@@ -8,8 +8,7 @@
 	pages={1-64},
 	keywords={IEC standards;IEEE standards;ISO standards;program testing;software engineering;systems engineering;software testing standards;internationally-agreed standard set;ISO/IEC/IEEE 29119-1 standard;ISO/IEC/IEEE 29119 standard;systems engineering;IEC standards;ISO standards;Testing;ISO;Software testing;Formal verification;Process control;29119;29119-1;software testing;Test Planning Process;Test Plan;verification and validation},
 	doi={10.1109/IEEESTD.2013.6588537},
-	ISSN={null},
-	month={Sep.},}
+	month={09},}
 
 @ARTICLE{7106435,
 	author={},
@@ -21,8 +20,7 @@
 	pages={1-118},
 	keywords={customer satisfaction;software engineering;systems engineering;software engineering;systems engineering;system life cycle process;customer satisfaction;international standard;software life cycle process;ISO/IEC 12207:2008;IEEE Standards;IEC Standards;iSO Standards;Software engineering;Product life cycle management;Systems engineering and theory;15288;life cycle;life cycle process;software},
 	doi={10.1109/IEEESTD.2015.7106435},
-	ISSN={null},
-	month={May},}
+	month={05},}
 
 @ARTICLE{8016712,
 	author={},
@@ -35,7 +33,7 @@
 	keywords={IEC standards;IEEE standards;ISO standards;project management;software engineering;systems engineering;vocabulary;ISO/IEC/IEEE international standard;systems engineering;vocabulary;terminology standardization;information technology;ISO standards;IEEE Computer Society and Project Management Institute;software engineering concepts;software requirements;IEEE Standards;ISO Standards;IEC Standards;Informatino technology;Software engineering;Systems engineering and theoryt;Terminology;computer;dictionary;information technology;software engineering;systems engineering;24765},
 	doi={10.1109/IEEESTD.2017.8016712},
 	ISSN={},
-	month={Aug}
+	month={08}
 }
 
 @article{2010govardhan,
@@ -73,17 +71,6 @@
 	acmid = {41801},
 	publisher = {IEEE Computer Society Press},
 	address = {Los Alamitos, CA, USA},
-}
-
-@article{torgeir2010,
-	author = {Dingsøyr, Torgeir and Dybå, Tore and Moe, Nils},
-	year = {2010},
-	month = {04},
-	pages = {1},
-	title = {Agile Software Development: An Introduction and Overview},
-	volume = {-1},
-	journal = {Agile Software Development, by Dingsøyr, Torgeir; Dybå, Tore; Moe, Nils Brede, ISBN 978-3-642-12574-4. Springer-Verlag Berlin Heidelberg, 2010, p. 1},
-	doi = {10.1007/978-3-642-12575-1_1}
 }
 
 @article{ionel2009,
@@ -128,7 +115,7 @@
 	journal={Charles-Axel Dein's personal website}, 
 	author={Dein, Charles-Axel}, 
 	year={2019}, 
-	month={Sep}
+	month={09}
 }
 
 @INPROCEEDINGS{581900,
@@ -142,7 +129,7 @@
 	keywords={systems engineering;software engineering;aerospace computing;space vehicles;special purpose computers;aerospace testing;Ariane 5 flight 501 failure;system engineering;S/W Engineering;specification errors;application/environment requirements;on-board computing system;proof-based system engineering;Failure analysis;Aerospace engineering;Systems engineering and theory;Cascading style sheets;Computer industry;Delay;Appraisal;Terminology;Bridges;Engineering drawings},
 	doi={10.1109/ECBS.1997.581900},
 	ISSN={},
-	month={March},}
+	month={03},}
 
 @book{Myers:2011:AST:2161638,
 	author = {Myers, Glenford J. and Sandler, Corey and Badgett, Tom},
@@ -151,4 +138,20 @@
 	isbn = {1118031962, 9781118031964},
 	edition = {3rd},
 	publisher = {Wiley Publishing},
+}
+
+@book{landry2011iterative,
+	title={Iterative and Agile Implementation Methodologies in Business Intelligence Software Development},
+	author={Landry, N.},
+	isbn={9780557247585},
+	url={https://books.google.be/books?id=bUHJAQAAQBAJ},
+	year={2011},
+	publisher={Lulu.com}
+}
+
+@ONLINE {jimhighsmith2001,
+	author = "Jim Highsmith",
+	title  = "History: The Agile Manifesto",
+	year   = "2001",
+	url    = "https://agilemanifesto.org/history.html"
 }
