--- a/paper/software-engineering.tex
+++ b/paper/software-engineering.tex
@@ -1,6 +1,5 @@
-% TODO vind meer sources
 \chapter{Software Engineering}
-The Institute of Electrical and Electronics Engineers \texttt{[IEEE]} defines the practice of Software Engineering as: "Application of a systematic, disciplined, quantifiable approach to the development, operation and maintenance of software; that is, the application of engineering to software" \cite[p.~421]{8016712}. The word ``systematic'' in this definition, emphasises the need for a structured process, depicting guidelines and models that describe how software should be developed the most efficient way possible. Such a process does exist and it is often referred to as the Software Development Life Cycle (SDLC) \cite[p.~420]{8016712}. 
+The Institute of Electrical and Electronics Engineers \texttt{[IEEE]} defines the practice of Software Engineering as: "Application of a systematic, disciplined, quantifiable approach to the development, operation and maintenance of software; that is, the application of engineering to software" \cite[p.~421]{8016712}. The word ``systematic'' in this definition, emphasises the need for a structured process, depicting guidelines and models that describe how software should be developed the most efficient way possible. Such a process does exist and it is often referred to as the Software Development Life Cycle (SDLC) \cite[p.~420]{8016712}. In the absence of a model, i.e. when the developer does what they deem correct without following any rules, the term \emph{Cowboy coding} is used \cite[p.~34]{landry2011iterative}.
 
 \section{Software Development Life Cycle}
 An implementation of the SDLC consists of two major components. First, the process is broken down into several smaller phases. Depending on the nature of the software, it is possible to omit steps or add more steps. I have compiled a simple yet generic approach from multiple sources \cite{2010govardhan} \cite{7106435}, to which most software projects adhere. This approach consists of five phases.
@@ -72,9 +71,38 @@ An implementation of the SDLC consists of two major components. First, the proce
 \end{figure}
 
 \section{Continuous Integration}
-(TODO) 
+\subsection{Agile Manifesto}
+Since the late 1990's, developers have tried to reduce the time occupied by the implementation and testing phases. In order to accomplish this, several new implementations of the SDLC were proposed and executed, later collectively referred to as \emph{Agile development methodologies}. The term \emph{Agile development} was coined during a meeting of seventeen prominent software developers, held between February 11-13, 2001, in Snowbird, Utah \cite{jimhighsmith2001}. The result of this meeting was a list of four key values and twelve principles that define these new methodologies, called the \emph{Manifesto for Agile Software Development}, also known as the \emph{Agile Manifesto}.
 
-Over the past decade, following the financial crisis of 2009 \cite{ionel2009}, extensive research has been put into reducing the time occupied by the implementation and testing phases. This resulted in a new development approach, known as \emph{Agile programming} \cite{torgeir2010}. The main philosophy of Agile programming is that the time-to-market should be as short as possible, allowing end-users to provide feedback much earlier in the process. (TODO)
+\subsubsection{Four values}
+
+\begin{enumerate}
+	\item \emph{\textbf{Individuals and interactions} over processes and tools} (TODO explain)
+	\item \emph{\textbf{Working software} over comprehensive documentation} (TODO explain)
+	\item \emph{\textbf{Customer collaboration} over contract negotiation} (TODO explain)
+	\item \emph{\textbf{Responding to change} over following a plan} (TODO explain)
+\end{enumerate}
+
+\subsubsection{Twelve principles}
+\begin{enumerate}
+	\item \textbf{(TODO principle 1)} (TODO explain)
+	\item \textbf{(TODO principle 2)} (TODO explain)
+	\item \textbf{(TODO principle 3)} (TODO explain)
+	\item \textbf{(TODO principle 4)} (TODO explain)
+	\item \textbf{(TODO principle 5)} (TODO explain)
+	\item \textbf{(TODO principle 6)} (TODO explain)
+	\item \textbf{(TODO principle 7)} (TODO explain)
+	\item \textbf{(TODO principle 8)} (TODO explain)
+	\item \textbf{(TODO principle 9)} (TODO explain)
+	\item \textbf{(TODO principle 10)} (TODO explain)
+	\item \textbf{(TODO principle 11)} (TODO explain)
+	\item \textbf{(TODO principle 12)} (TODO explain)
+\end{enumerate}
+
+\subsection{The need for Agile}
+Over the past decade, the agile methodologies have received increasing attention amongst software developers, following the world economic crisis of 2009 \cite{ionel2009}. A consequence of this crisis was that software companies were forced to cut on their expenses and find ways to reduce the \emph{time-to-market} of their applications. Applied to the previously discussed waterfall model, this means that the time occupied by the implementation and testing phases should be as short as possible, allowing customers and end-users to provide feedback much earlier in the process.
+
+- feedback loop
 
 - buildup naar waarom tooling nodig is
 
