--- a/paper/references.bib
+++ b/paper/references.bib
@@ -155,3 +155,24 @@
 	year   = "2001",
 	url    = "https://agilemanifesto.org/history.html"
 }
+
+@misc{beck2001agile,
+	author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
+	booktitle = {Manifesto for Agile Software Development},
+	description = {Manifesto for Agile Software Development},
+	keywords = {imported},
+	title = {Manifesto for Agile Software Development},
+	url = {https://www.agilemanifesto.org/},
+	year = 2001
+}
+
+@incollection{Hazzan2014,
+	doi = {10.1007/978-3-319-10157-6_3},
+	url = {https://doi.org/10.1007/978-3-319-10157-6_3},
+	year = {2014},
+	publisher = {Springer International Publishing},
+	pages = {9--14},
+	author = {Orit Hazzan and Yael Dubinsky},
+	title = {The Agile Manifesto},
+	booktitle = {Agile Anywhere}
+}
