--- a/paper/references.bib
+++ b/paper/references.bib
@@ -10,6 +10,17 @@
 	doi={10.1109/IEEESTD.2013.6588537},
 	month={09},}
 
+@article{glass2001agile,
+	title={Agile versus traditional: Make love, not war!},
+	author={Glass, Robert L},
+	journal={Cutter IT Journal},
+	volume={14},
+	number={12},
+	pages={12--18},
+	year={2001},
+	publisher={CUTTER INFORMATION CORP.}
+}
+
 @ARTICLE{7106435,
 	author={},
 	journal={ISO/IEC/IEEE 15288 First edition 2015-05-15},
@@ -105,7 +116,6 @@
 	publisher="Springer Berlin Heidelberg",
 	address="Berlin, Heidelberg",
 	pages="218--234",
-	abstract="A regression bug is a bug which causes a feature that worked correctly to stop working after a certain event (system upgrade, system patching, daylight saving time switch, etc.). Very often an encompassed bug fix included in a patch causes the regression bug. Regression bugs are an annoying and painful phenomena in the software development process, requiring a great deal of effort to find. Many tools have been developed in order to find the existence of such bugs. However, a great deal of manual work is still needed to find the exact source-code location that caused a regression bug.",
 	isbn="978-3-540-77966-7"
 }
 
@@ -166,13 +176,39 @@
 	year = 2001
 }
 
-@incollection{Hazzan2014,
-	doi = {10.1007/978-3-319-10157-6_3},
-	url = {https://doi.org/10.1007/978-3-319-10157-6_3},
-	year = {2014},
-	publisher = {Springer International Publishing},
-	pages = {9--14},
-	author = {Orit Hazzan and Yael Dubinsky},
-	title = {The Agile Manifesto},
-	booktitle = {Agile Anywhere}
+@Inbook{Hazzan2014,
+	author="Hazzan, Orit
+	and Dubinsky, Yael",
+	title="The Agile Manifesto",
+	bookTitle="Agile Anywhere: Essays on Agile Projects and Beyond",
+	year="2014",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="9--14",
+	isbn="978-3-319-10157-6",
+	doi="10.1007/978-3-319-10157-6_3",
+	url="https://doi.org/10.1007/978-3-319-10157-6_3"
+}
+
+@InProceedings{10.1007/978-3-030-03673-7_2,
+	author="Kiv, Soreangsey
+	and Heng, Samedi
+	and Kolp, Manuel
+	and Wautelet, Yves",
+	editor="Kuhrmann, Marco
+	and Schneider, Kurt
+	and Pfahl, Dietmar
+	and Amasaki, Sousuke
+	and Ciolkowski, Marcus
+	and Hebig, Regina
+	and Tell, Paolo
+	and Kl{\"u}nder, Jil
+	and K{\"u}pper, Steffen",
+	title="Agile Manifesto and Practices Selection for Tailoring Software Development: A Systematic Literature Review",
+	booktitle="Product-Focused Software Process Improvement",
+	year="2018",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="12--30",
+	isbn="978-3-030-03673-7"
 }
