--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -2,6 +2,9 @@
 \input{../.latex-common/preamble.tex}
 \renewcommand{\documenttitle}{Paper: Working draft}
 
+% Agile principles.
+\newcommand{\agileprinciple}[2]{\paragraph*{Principle #1: #2}}
+
 % Add the references.
 \addbibresource{references.bib}
 
