--- a/paper/software-engineering/continuous-integration.tex
+++ b/paper/software-engineering/continuous-integration.tex
@@ -2,7 +2,7 @@
 \subsection{Agile Manifesto}
 Since the late 1990's, developers have tried to reduce the time occupied by the implementation and testing phases. In order to accomplish this, several new implementations of the SDLC were proposed and evaluated, later collectively referred to as \emph{Agile development methodologies}. The term \emph{Agile development} was coined during a meeting of seventeen prominent software developers, held between February 11-13, 2001, in Snowbird, Utah \cite{jimhighsmith2001}. As a result of this meeting, the developers defined the four key values and twelve principles that define these new methodologies, called the \emph{Manifesto for Agile Software Development}, also known as the \emph{Agile Manifesto}.\\
 
-\noindent The four key values of Agile software development should be interpreted as follows, according to the authors: "While there is value in the items on the right, we value the items on the left more" \cite{beck2001agile}. I will explain these key values and their corresponding principles, as proposed by Kiv \cite[p.~12]{10.1007/978-3-030-03673-7_2}. It should be noted that these values are merely guidelines and that no concrete implementation is provided. A variety of different programming models, based on the agile ideologies, have arisen since 2001, each incorporating these values in their own different way.
+\noindent The four key values of Agile software development should be interpreted as follows, according to the authors: "While there is value in the items on the right, we value the items on the left more" \cite{beck2001agile}. I will explain these key values and their corresponding principles, as proposed by Kiv \cite[p.~12]{10.1007/978-3-030-03673-7_2}. It should be noted that these values are merely guidelines and that no concrete implementation is provided. A variety of different programming models, based on the agile ideologies, have arisen since 2001, each incorporating these values and principles in their own unique way.
 
 \subsubsection{\emph{Individuals and interactions} over processes and tools}
 Instead of meticulously following an outlined development process and utilising the best tools available, the main focus of attention should shift to the people behind the development and how they are interacting with each other. According to Glass, the quality of the programmers and the team is the most influential factor in the successful development of software \cite{glass2001agile}. 
