--- a/paper/references.bib
+++ b/paper/references.bib
@@ -119,6 +119,19 @@
 	isbn="978-3-540-77966-7"
 }
 
+@Inbook{Meyer2014,
+	author="Meyer, Bertrand",
+	title="Overview",
+	bookTitle="Agile!: The Good, the Hype and the Ugly",
+	year="2014",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="1--15",
+	isbn="978-3-319-05155-0",
+	doi="10.1007/978-3-319-05155-0_1",
+	url="https://doi.org/10.1007/978-3-319-05155-0_1"
+}
+
 @misc{dein_2019, 
 	title={dein.fr}, 
 	url={https://www.dein.fr/2019-09-06-test-coverage-only-matters-if-at-100-percent.html}, 
