--- a/paper/software-engineering/continuous-integration.tex
+++ b/paper/software-engineering/continuous-integration.tex
@@ -2,13 +2,13 @@
 \subsection{Agile Manifesto}
 Since the late 1990's, developers have tried to reduce the time occupied by the implementation and testing phases. In order to accomplish this, several new implementations of the SDLC were proposed and evaluated, later collectively referred to as \emph{Agile development methodologies}. The term \emph{Agile development} was coined during a meeting of seventeen prominent software developers, held between February 11-13, 2001, in Snowbird, Utah \cite{jimhighsmith2001}. As a result of this meeting, the developers defined the four key values and twelve principles that define these new methodologies, called the \emph{Manifesto for Agile Software Development}, also known as the \emph{Agile Manifesto}.\\
 
-\noindent The four key values of Agile software development should be interpreted as follows, according to the authors: "While there is value in the items on the right, we value the items on the left more" \cite{beck2001agile}. I will explain these key values and their corresponding principles, as proposed by Kiv \cite[p.~12]{10.1007/978-3-030-03673-7_2}. It should be noted that these values are merely guidelines and that no concrete implementation is provided. A variety of different programming models, based on the agile ideologies, have arisen since 2001, each incorporating these values and principles in their own unique way.
+\noindent According to the authors, the four key values of Agile software development should be interpreted as follows: ``While there is value in the items on the right, we value the items on the left more'' \cite{beck2001agile}. Meyer provides a the following definition for the four values: ``general assumptions framing the agile view of the world``, while defining the principles as ``core agile rules, organizational and technical`` \cite[p.~2]{Meyer2014}. A variety of different programming models, based on the agile ideologies, have arisen since 2001 and each one incorporates these values and principles in their own unique way. I will briefly explain these values and their corresponding principles, using the mapping proposed by Kiv \cite[p.~12]{10.1007/978-3-030-03673-7_2}.
 
 \subsubsection{\emph{Individuals and interactions} over processes and tools}
 Instead of meticulously following an outlined development process and utilising the best tools available, the main focus of attention should shift to the people behind the development and how they are interacting with each other. According to Glass, the quality of the programmers and the team is the most influential factor in the successful development of software \cite{glass2001agile}. 
 
 \agileprinciple{5}{Build projects around motivated individuals. Give them the environment and support they need, and trust them to get the job done.}
-TODO EXPLAIN
+
 
 \agileprinciple{6}{The most efficient and effective method of conveying information to and within a development team is face-to-face conversation.}
 TODO EXPLAIN
@@ -54,6 +54,12 @@ TODO EXPLAIN
 
 \subsection{The need for Agile}
 Over the past decade, the agile methodologies have received increasing attention amongst software developers, following the world economic crisis of 2009 \cite{ionel2009}. A consequence of this crisis was that software companies were forced to cut on their expenses and find ways to reduce the \emph{time-to-market} of their applications.
+
+%leuke grafiek hier op p5
+%https://www.scriptieprijs.be/sites/default/files/Master%20thesis%20-The%20importance%20and%20presence%20of%20agile%20principles%20in%20agile%20software%20development.pdf
+
+%hier in hoofdstuk 7 staat iets over continuous integration
+%https://link.springer.com/chapter/10.1007/978-3-319-05155-0_7
 
 - probleem met waterfall model -> een bron hiervoor?
 
