--- a/paper/references.bib
+++ b/paper/references.bib
@@ -225,3 +225,12 @@
 	pages="12--30",
 	isbn="978-3-030-03673-7"
 }
+
+@book{10.5555/1162257,
+	author = {Martin, Robert C. and Martin, Micah},
+	title = {Agile Principles, Patterns, and Practices in C\# (Robert C. Martin)},
+	year = {2006},
+	isbn = {0131857258},
+	publisher = {Prentice Hall PTR},
+	address = {USA}
+}
